# qtrader

./: .gitignore  CHANGELOG  CMakeLists.txt  LICENSE  README.md  qtrade.pro  qtrader.pro
src/libs/: CMakeLists.txt
src/libs/extensionsystem/: CMakeLists.txt  aggregate.h  iplugin.h  pluginerroroverview.h  pluginerrorview.h  pluginmanager.cpp  pluginmanager.h  pluginspec.cpp  pluginspec.h  pluginspec_p.h  pluginview.cpp
src/libs/libutils/: CMakeLists.txt  basetreeview.cpp  basetreeview.h  buildablehelperlibrary.h  checkablemessagebox.h  classnamevalidatinglineedit.h  codegeneration.cpp  codegeneration.h  completingtextedit.h  consoleprocess.h  crumblepath.h  detailsbutton.h  detailswidget.h  elidinglabel.h  faketooltip.h  fancylineedit.h  fileinprojectfinder.h  filewizarddialog.h  filterlineedit.h  headerviewstretcher.cpp  headerviewstretcher.h  hostosinfo.h  htmldocextractor.h  iwelcomepage.h  json.h  navigationtreeview.cpp  networkaccessmanager.h  newclasswidget.h  osspecificaspects.h  persistentsettings.h  projectintropage.h  qtcprocess.h  reloadpromptutils.h  savefile.h  sleep.h  statuslabel.h  stringutils.cpp  stylehelper.h  textfileformat.h  unixutils.h  (+3 more)
src/libs/model/: CMakeLists.txt  opentrade_lua.cpp  opentrade_lua.h
src/libs/opentrade/: CMakeLists.txt  account.cpp  account.h  accountmanager.cpp  altidgrouplist.h  appearance.cpp  appearance.h  backfillprovidermanager.cpp  backfillrequest.h  bar.cpp  bar.h  bar_p.h  barmanager.cpp  barmanager.h  barrequest.cpp  barrequest.h  barrequestlist.cpp  barrequestlist.h  barseries.cpp  barseriesinfo.cpp  brokeraccount.cpp  brokeraccount.h  brokeraccountfield.h  brokeraccountfieldlist.h  brokerinfo.h  brokerorderfield.h  chart.cpp  chart.h  clock.h  datarequests.cpp  datarequests.h  engine_instrumentlist.h  engine_parameter.cpp  executionprovidermanager.cpp  executionprovidermanager.h  historicaldatarequest.cpp  historicaldatarequest.h  ibackfillprovider.h  ibex.cpp  ibex.h  (+50 more)
src/libs/opentrade2/: symbol.cpp
src/libs/opentrade3/: CMakeLists.txt  accountmanager.h  backfillprovidermanager.h  backfillrequest.cpp  bar.cpp  bar.h  bar_p.h  barseries.cpp  barseries.h  iexecutionprovider.h  imarketdataprovider.h  instrument.cpp  instrument.h  instrumentmanager.cpp  instrumentmanager.h  iprovider.h  marketdataprovidermanager.cpp  orderbook.cpp  quote.h  trade.cpp  trade.h
src/libs/opentrade4/: altidgroup.cpp  altidgrouplist.cpp  bar.cpp  bar.h  barfactory.cpp  barrequest.cpp  barrequest.h  barseriesinfo.h  barserieslist.cpp  brokeraccountlist.cpp  brokerorderfieldlist.h  brokerposition.cpp  brokerposition.h  canvas.cpp  clock.cpp  datamanager.cpp  datamanager.h  datarequests.cpp  engine_instrumentlist.cpp  historicaldataprovider.cpp  indicator.cpp  instrument.h  instrumentprovider.cpp  marketdatafilter.cpp  marketdataprovider.h  opentrade.cpp  opentrade.h  opentrade_enum.h  order.cpp  parameterattribute.cpp  parameterattribute.h  performance.h  portfolio.cpp  portfolioaccount.cpp  portfolioaccount.h  portfoliopricer.h  position.h  project.cpp  providererror.cpp  providererror.h  (+13 more)
src/libs/updater/: updaterfiledownloader.cpp
src/libs/utils/: CMakeLists.txt  annotateditemdelegate.h  ansiescapecodehandler.h  basevalidatinglineedit.h  bracematcher.h  changeset.h  elfreader.h  fancymainwindow.h  filesearch.cpp  filesearch.h  filesystemwatcher.h  flowlayout.h  historycompleter.h  ipaddresslineedit.h  linecolumnlabel.h  multitask.h  navigationtreeview.h  outputformatter.h  parameteraction.h  pathchooser.h  pathlisteditor.h  portlist.h  projectnamevalidatinglineedit.h  proxyaction.h  qtcolorbutton.h  qtcprocess.cpp  savedaction.h  settingsselector.h  stringutils.h  synchronousprocess.h  tcpportsgatherer.h  uncommentselection.h  utils_global.h  winutils.cpp
src/plugins/: CMakeLists.txt
src/plugins/coreplugin/: CMakeLists.txt  Core.json.in  Plugin.xml.in  chartmode.cpp  chartmode.h  coreplugin.cpp  coreplugin.h  fileutils.cpp  fileutils.h  generalsettings.cpp  generalsettings.h  generalsettings.ui  icore.cpp  icore.h  mainwindow.cpp  mainwindow.h  manhattanstyle.cpp  messagemanager.cpp  messagemanager.h  mimetypesettings.cpp  vcsmanager.cpp  versiondialog.cpp
src/plugins/cppeditor/: CMakeLists.txt  luaautocompleter.cpp  luaautocompleter.h  luaclasswizard.cpp  luaclasswizard.h  luaeditor.cpp  luaeditor.h  luaeditor.qrc  luaeditorconstants.h  luaeditorenums.h  luaeditorplugin.cpp  luaeditorplugin.h  luaelementevaluator.cpp  luaelementevaluator.h  luafilewizard.cpp  luafilewizard.h  luafollowsymbolundercursor.cpp  luafollowsymbolundercursor.h  luafunctiondecldeflink.cpp  luafunctiondecldeflink.h  luahighlighter.cpp  luahighlighter.h  luahighlighterfactory.cpp  luahighlighterfactory.h  luahoverhandler.cpp  luahoverhandler.h  luaincludehierarchy.cpp  luaincludehierarchy.h  luaincludehierarchy_test.cpp  luaincludehierarchyitem.cpp  luaincludehierarchyitem.h  luaincludehierarchymodel.cpp  luaincludehierarchymodel.h  luaincludehierarchytreeview.cpp  luaincludehierarchytreeview.h  luaoutline.cpp  luaoutline.h  luapreprocessordialog.cpp  luapreprocessordialog.h  luaquickfix.cpp  (+13 more)
src/plugins/debugger/: CMakeLists.txt
src/plugins/domain/: Domain.pluginspec.in  bar.cpp  bar.h  domain.pro  domainconstants.h  domainplugin.cpp  domainplugin.h  ihistoricalprovider.h  imarketdataprovider.h  instrument.cpp  instrument.h  iorderexecutionprovider.h  iprovider.h  qtimespan.cpp
src/plugins/find/: CMakeLists.txt  Find.json  currentdocumentfind.cpp  searchresultwidget.cpp
src/plugins/helloworld/: CMakeLists.txt  HelloWorld.json.in  helloworldplugin.cpp
src/plugins/locator/: CMakeLists.txt  Locator.json  Plugin.xml.in
src/plugins/luaeditor/: CMakeLists.txt  luacompleter.cpp  luacompleter.h  luaconstants.h  luaeditor.cpp  luaeditor.h  luaeditorplugin.cpp  luaeditorplugin.h  luaindenter.cpp  luaindenter.h  luamanager.cpp  luamanager.h  luatocpp.h
src/plugins/opentrade/: CMakeLists.txt  OpenTrade.json.in  bar.h  historicaldatarequest.cpp  historicaldatarequest.h  historicalprovidermanager.h  ihistoricalprovider.h  imarketdataprovider.h  instrument.cpp  (+12 more)
(+223 files in other folders)
