cmake_minimum_required(VERSION 2.8.9)

if(APPLE)
    SET(LIBRARY_OUTPUT_PATH ${EXECUTABLE_OUTPUT_PATH}/${APPLICATION_NAME}.app/Contents/${APPLICATION_PLUGINS_PATH})
else()
    SET(LIBRARY_OUTPUT_PATH ${EXECUTABLE_OUTPUT_PATH}/${APPLICATION_PLUGINS_PATH})
endif()

SET(PROJECT_PLUGINS_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}" "${CMAKE_CURRENT_BINARY_DIR}"  CACHE INTERNAL "" FORCE)

# Default Plugin Info
set(PLUGINS_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}" CACHE INTERNAL "" FORCE)
set(PLUGINS_DEFAULT_VERSION ${APPLICATION_VERSION} CACHE INTERNAL "" FORCE)
set(PLUGINS_DEFAULT_COMPAT_VERSION ${APPLICATION_VERSION} CACHE INTERNAL "" FORCE)
set(PLUGINS_DEFAULT_LICENSE ${APPLICATION_LICENSE})
set(PLUGINS_DEFAULT_CATEGORY "System" CACHE INTERNAL "" FORCE)
set(PLUGINS_DEFAULT_DESCRIPTION "The Open Trading Platform" CACHE INTERNAL "" FORCE)
set(PLUGINS_DEFAULT_URL "www.dailypips.org" CACHE INTERNAL "" FORCE)
set(PLUGINS_DEFAULT_COPYRIGHT "(c) Xiaojun Gao" CACHE INTERNAL "" FORCE)
set(PLUGINS_DEFAULT_VENDOR "dailypips" CACHE INTERNAL "" FORCE)

add_subdirectory(coreplugin)
add_subdirectory(opentrade)
add_subdirectory(tws)
add_subdirectory(helloworld)
#add_subdirectory(editmode)
#add_subdirectory(find)
#add_subdirectory(locator)
#add_subdirectory(texteditor)
#add_subdirectory(cppeditor)
#add_subdirectory(chart)
